adds sticky footer

--- a/html/contact.html
+++ b/html/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/additional.css">
 
 </head>
 <body>
@@ -29,10 +30,16 @@
           </ul>
         </div>
       </nav>
-    
-    <div class="container">
-        <!-- Content here -->
-    </div>
+
+    <!-- Main Section -->
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+        </div>
+    </footer>
+    <!-- Javscript files -->
     <script src="../js/jquery-3.5.1.slim.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
