--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS files -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/additional.css">
 
 </head>
 <body>
@@ -30,9 +32,15 @@
         </div>
       </nav>
     
-    <div class="container">
-        <!-- Content here -->
-    </div>
+    <!-- Main Section -->
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="container">
+        <span class="text-muted">Place sticky footer content here.</span>
+        </div>
+    </footer>
+    <!-- Javscript files -->
     <script src="../js/jquery-3.5.1.slim.min.js"></script>
     <script src="../js/popper.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
