fixes sticky footer and adds some content to the homepage

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <!-- Nav bar -->
+    <!-- Start navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html">Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,15 +30,21 @@
           </ul>
         </div>
       </nav>
-    
-    <!-- Main Section -->
-
-    <!-- Footer Section -->
+    <!-- End navbar -->
+    <!-- Start main section -->
+    <main role="main" class="container">
+        <h1 class="mt-5">Sticky footer</h1>
+        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
+        <p>Use <a href="../sticky-footer-navbar/">the sticky footer with a fixed navbar</a> if need be, too.</p>
+      </main>
+    <!-- End main section -->
+    <!-- Start footer section -->
     <footer class="footer">
         <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted">This footer is sticky</span>
         </div>
     </footer>
+    <!-- End footer section -->
     <!-- Javscript files -->
     <script src="../js/jquery-3.5.1.slim.min.js"></script>
     <script src="../js/popper.min.js"></script>
