--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <!-- Nav bar -->
+    <!-- Start navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html">Van</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,15 +31,50 @@
           </ul>
         </div>
       </nav>
-    
-    <!-- Main Section -->
-
-    <!-- Footer Section -->
+    <!-- End navbar -->
+    <!-- Start main section -->
+    <main role="main" class="container">
+        <div class="row">
+            <div class="col">
+                <img src="../images/shrek-hero.jpg" class="img-fluid" alt="Selfie">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="card text-center">
+                    <img class="card-img-top" src="../images/red-pill.jpg" alt="Red pill">
+                    <div class="card-body">
+                      <h4 class="card-title">Red pill</h4>
+                      <p class="card-text">The sometimes painful truth of reality</p>
+                      <a href="#" class="btn btn-primary">Embrace</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col">
+                <div class="card text-center">
+                    <img class="card-img-top" src="../images/blue-pill.jpg" alt="Blue pill">
+                    <div class="card-body">
+                      <h4 class="card-title">Blue pill</h4>
+                      <p class="card-text">Blissful ignorance of illusion</p>
+                      <a href="#" class="btn btn-primary">Remain</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+              One of three columns
+            </div>
+        </div>
+      </main>
+    <!-- End main section -->
+    <!-- Start footer section -->
     <footer class="footer">
         <div class="container">
-        <span class="text-muted">Place sticky footer content here.</span>
+        <span class="text-muted">This footer is sticky</span>
         </div>
     </footer>
+    <!-- End footer section -->
     <!-- Javscript files -->
     <script src="../js/jquery-3.5.1.slim.min.js"></script>
     <script src="../js/popper.min.js"></script>
