--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
                     <div class="card-body">
                       <h4 class="card-title">Red pill</h4>
                       <p class="card-text">The sometimes painful truth of reality</p>
-                      <a href="#" class="btn btn-primary">Embrace</a>
+                      <a href="./portfolio.html" class="btn btn-primary">Embrace</a>
                     </div>
                   </div>
             </div>
@@ -56,14 +56,19 @@
                     <div class="card-body">
                       <h4 class="card-title">Blue pill</h4>
                       <p class="card-text">Blissful ignorance of illusion</p>
-                      <a href="#" class="btn btn-primary">Remain</a>
+                      <a href="https://www.youtube.com/results?search_query=cat+videos" class="btn btn-primary">Remain</a>
                     </div>
                   </div>
             </div>
         </div>
         <div class="row">
-            <div class="col">
-              One of three columns
+            <div class="col d-block d-sm-none">
+                <h2>Response</h2>
+                <p>Have I gotten one from you?</p>
+            </div>
+            <div class="col d-none d-md-block">
+                <h2>Responsive</h2>
+                <p>Is what this page should be</p>
             </div>
         </div>
       </main>
