--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS files -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/additional.css">
 
@@ -11,7 +12,9 @@
 <body>
     <!-- Start navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <h1>
         <a class="navbar-brand" href="./index.html">Contact</a>
+      </h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,11 +36,28 @@
     <!-- End navbar -->
     <!-- Start main section -->
     <main role="main" class="container">
-      <h1 class="mt-5">Sticky footer</h1>
-      <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
-      <p>Use <a href="../sticky-footer-navbar/">the sticky footer with a fixed navbar</a> if need be, too.</p>
+      <div class="row">
+          <div class="col">
+              <div class="card text-center">
+                  <img class="card-img-top" src="../images/call-me.jpg" alt="Piece of paper with a number saying 'call me'">
+                  <div class="card-body">
+                    <h4 class="card-title">Call</h4>
+                    <a class="card-text" href="tel:+1-555-1234">555-1234</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col">
+              <div class="card text-center">
+                  <img class="card-img-top" src="../images/junk-mail.jpg" alt="Junk mail">
+                  <div class="card-body">
+                    <h4 class="card-title">Email</h4>
+                    <a class="card-text" href = "mailto: kai.matte@lipstick.com">kai.matte@lipstick.com</a>
+                  </div>
+                </div>
+          </div>
+      </div>
     </main>
-    <!-- End main section -->
+  <!-- End main section -->>
     <!-- Start footer section -->
     <footer class="footer">
         <div class="container">
