--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -12,7 +12,9 @@
 <body>
     <!-- Start navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <h1><a class="navbar-brand" href="./index.html">Portfolio</a></h1>
+      <h1>
+        <a class="navbar-brand" href="./index.html">Portfolio</a>
+      </h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -71,7 +73,7 @@
               </div>
             </div>
           </div>
-          
+
       </div>
 
 
