--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vans responsive portfolio</title>
     <!-- CSS files -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/additional.css">
@@ -35,7 +35,7 @@
       </nav>
     <!-- End navbar -->
     <!-- Start main section -->
-    <main role="main" class="container">
+    <main class="container">
         <div class="row">
             <div class="col">
                 <img src="../images/shrek-hero.jpg" class="img-fluid" alt="Selfie">
