--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>See what Van can do</title>
     <!-- CSS files -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/additional.css">
@@ -35,10 +35,10 @@
       </nav>
     <!-- End navbar -->
     <!-- Start main section -->
-    <main role="main" class="container">
+    <main class="container">
       <div class="row">
         <div class="col">
-          <p class="text-center">This portfolio demonstrates nested rows and columns</p>
+          <h2 class="text-center demonstration">This portfolio demonstrates nested rows and columns</h2>
         </div>
       </div>
 
@@ -69,7 +69,7 @@
           <div class="col d-block d-sm-none">
             <div class="row">
               <div class="col">
-                <p class="text-center">It was not</p>
+                <p class="text-center">It is not</p>
               </div>
             </div>
           </div>
