adds comments to html

--- a/html/contact.html
+++ b/html/contact.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <!-- Start navbar -->
+    <!-- Start nav logo -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <h1>
         <a class="navbar-brand" href="./index.html">Contact</a>
@@ -19,7 +20,8 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+    <!-- End nav logo -->
+        <!-- Start navigation links -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item">
@@ -33,59 +35,86 @@
               </li>
           </ul>
         </div>
+        <!-- End navigation links -->
       </nav>
     <!-- End navbar -->
     <!-- Start main section -->
     <main class="container">
+      <!-- Start row -->
       <div class="row">
+          <!-- Start column -->
           <div class="col">
+            <!-- Start form -->
             <form>
+              <!-- Start row -->
               <div class="row">
+                <!-- Start column -->
                 <div class="col-md-4">
-              <div class="form-group">
-                <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
-              </div>
+                  <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                  </div>
                 </div>
+                <!-- End column -->
+                <!-- Start column -->
                 <div class="col-md-4">
-              <div class="form-group">
-                <label for="firstName">First Name</label>
-                <input type="text" class="form-control" id="firstName" placeholder="Password">
-              </div>
+                  <div class="form-group">
+                    <label for="firstName">First Name</label>
+                    <input type="text" class="form-control" id="firstName" placeholder="Password">
+                  </div>
                 </div>
+                <!-- End column -->
+                <!-- Start column -->
                 <div class="col-md-4">
-              <div class="form-group">
-                <label for="lastName">Last Name</label>
-                <input type="text" class="form-control" id="lastName" placeholder="Password">
-              </div>
+                  <div class="form-group">
+                    <label for="lastName">Last Name</label>
+                    <input type="text" class="form-control" id="lastName" placeholder="Password">
+                  </div>
                 </div>
-            </div>
-            <div class="row">
-              <div class="col">
-              <button type="submit" class="btn btn-primary">Submit</button>
+                <!-- End column -->
               </div>
-            </div>
+              <!-- End row -->
+              <!-- Start row -->
+              <div class="row">
+                <!-- Start column -->
+                <div class="col">
+                  <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+                <!-- Start column -->
+              </div>
+            <!-- End row -->
             </form>
+            <!-- End form -->
           </div>
+        <!-- End column -->
       </div>
-      
+      <!-- End row -->
+      <!-- Start social media links -->
+      <!-- Start row -->
       <div class="row social-media-links">
+        <!-- Start column -->
         <div class="col">
           <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
         </div>
-
+        <!-- End column -->
+        <!-- Start column -->
         <div class="col">
           <a href="https://www.twitter.com/" class="fa fa-twitter"></a>
         </div>
-
+        <!-- End column -->
+        <!-- Start column -->
         <div class="col">
           <a href="https://www.linkedin.com/" class="fa fa-linkedin"></a>
         </div>
-
+        <!-- End column -->
+        <!-- Start column -->
         <div class="col">
           <a href="https://www.instagram.com/" class="fa fa-instagram"></a>
         </div>
+        <!-- End column -->
       </div>
+      <!-- End row -->
+      <!-- End social media links -->
     </main>
   <!-- End main section -->
     <!-- Start footer section -->
