--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <!-- Start navbar -->
+    <!-- Start nav logo -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <h1>
         <a class="navbar-brand" href="./index.html">Van</a>
@@ -18,7 +19,8 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+        <!-- End nav logo -->
+        <!-- Start navigation links -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
@@ -32,16 +34,23 @@
               </li>
           </ul>
         </div>
+        <!-- end navigation links -->
       </nav>
     <!-- End navbar -->
     <!-- Start main section -->
     <main class="container">
+        <!-- Start row -->
         <div class="row">
+            <!-- Start column -->
             <div class="col">
                 <img src="../images/shrek-hero.jpg" class="img-fluid" alt="Selfie">
             </div>
+             <!-- End column -->
         </div>
+        <!-- End row -->
+        <!-- Start row -->
         <div class="row">
+            <!-- Start column -->
             <div class="col">
                 <div class="card text-center">
                     <img class="card-img-top" src="../images/red-pill.jpg" alt="Red pill">
@@ -52,6 +61,8 @@
                     </div>
                   </div>
             </div>
+            <!-- End column -->
+            <!-- Start column -->
             <div class="col">
                 <div class="card text-center">
                     <img class="card-img-top" src="../images/blue-pill.jpg" alt="Blue pill">
@@ -62,17 +73,25 @@
                     </div>
                   </div>
             </div>
+            <!-- End column -->
         </div>
+        <!-- End row -->
+        <!-- Start row -->
         <div class="row">
+            <!-- Start column -->
             <div class="col d-block d-sm-none">
                 <h2>Response</h2>
                 <p>Have I gotten one from you?</p>
             </div>
+            <!-- End column -->
+            <!-- Start column -->
             <div class="col d-none d-md-block">
                 <h2>Responsive</h2>
                 <p>Is what this page should be</p>
             </div>
+            <!-- End column -->
         </div>
+        <!-- End row -->
       </main>
     <!-- End main section -->
     <!-- Start footer section -->
