--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <!-- Start navbar -->
+    <!-- Start nav logo -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <h1>
         <a class="navbar-brand" href="./index.html">Portfolio</a>
@@ -18,7 +19,8 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+        <!-- End nav logo -->
+        <!-- Start navigation links -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item">
@@ -32,49 +34,73 @@
               </li>
           </ul>
         </div>
+        <!-- end navigation links -->
       </nav>
     <!-- End navbar -->
     <!-- Start main section -->
     <main class="container">
+      <!-- Start row -->
       <div class="row">
+        <!-- Start column -->
         <div class="col">
           <h2 class="text-center demonstration">This portfolio demonstrates nested rows and columns</h2>
         </div>
+        <!-- End column -->
       </div>
-
+      <!-- End row -->
+      <!-- Start row -->
       <div class="row">
-
+          <!-- Start column -->
           <div class="col">
+            <!-- Start row -->
             <div class="row no-gutters">
+              <!-- Start column -->
               <div class="col">
                 <p class="text-right">Wel</p>
               </div>
+              <!-- End column -->
+              <!-- Start column -->
               <div class="col order-md-last order-first">
-              <p class="text-left">come</p>
+                <p class="text-left">come</p>
               </div>
+              <!-- End column -->
             </div>
+            <!-- End row -->
           </div>
-      
+          <!-- End column -->
+          <!-- Start column -->
           <div class="col d-none d-md-block">
+            <!-- Start row -->
             <div class="row">
+              <!-- Start column -->
               <div class="col">
                 <p class="text-center">Is the text to the left one word or two?</p>
               </div>
+              <!-- End column -->
+              <!-- Start column -->
               <div class="col">
                 <p class="text-center">View on mobile for the truth</p>
               </div>
+              <!-- End column -->
             </div>
+            <!-- End row -->
           </div>
-
+          <!-- End column -->
+          <!-- Start column -->
           <div class="col d-block d-sm-none">
+            <!-- Start row -->
             <div class="row">
+              <!-- Start column -->
               <div class="col">
                 <p class="text-center">It is not</p>
               </div>
+              <!-- End column -->
             </div>
+            <!-- End row -->
           </div>
-
+          <!-- End column -->
       </div>
+      <!-- End row -->
 
 
     </main>
