--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vans responsive portfolio</title>
     <!-- CSS files -->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/additional.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/additional.css">
 
 </head>
 <body>
@@ -43,7 +43,7 @@
         <div class="row">
             <!-- Start column -->
             <div class="col">
-                <img src="../images/shrek-hero.jpg" class="img-fluid" alt="Selfie">
+                <img src="./images/shrek-hero.jpg" class="img-fluid" alt="Selfie">
             </div>
              <!-- End column -->
         </div>
@@ -53,7 +53,7 @@
             <!-- Start column -->
             <div class="col">
                 <div class="card text-center">
-                    <img class="card-img-top" src="../images/red-pill.jpg" alt="Red pill">
+                    <img class="card-img-top" src="./images/red-pill.jpg" alt="Red pill">
                     <div class="card-body">
                       <h4 class="card-title">Red pill</h4>
                       <p class="card-text">The sometimes painful truth of reality</p>
@@ -65,7 +65,7 @@
             <!-- Start column -->
             <div class="col">
                 <div class="card text-center">
-                    <img class="card-img-top" src="../images/blue-pill.jpg" alt="Blue pill">
+                    <img class="card-img-top" src="./images/blue-pill.jpg" alt="Blue pill">
                     <div class="card-body">
                       <h4 class="card-title">Blue pill</h4>
                       <p class="card-text">Blissful ignorance of illusion</p>
@@ -102,8 +102,8 @@
     </footer>
     <!-- End footer section -->
     <!-- Javscript files -->
-    <script src="../js/jquery-3.5.1.slim.min.js"></script>
-    <script src="../js/popper.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="./js/jquery-3.5.1.slim.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
